[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[test]]
name = "day_1"
path = "src/day1.rs"

[[test]]
name = "day_2"
path = "src/day2.rs"

[[test]]
name = "day_3"
path = "src/day3.rs"